# atms-api

./: LICENSE.md  README.md  main.py  manage.py  pyproject.toml  requirements.txt
api/: __init__.py
api/v1/: __init__.py
api/v1/login/: __init__.py  view.py
api/v1/user/: __init__.py
config/: __init__.py  config.py
core/: __init__.py  schemas.py
models/: __init__.py  models.py
models/user/: __init__.py  model.py  user_model.py
utils/: __init__.py  security.py  timer_job.py
